--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:client": "esbuild src/demo/client.ts --bundle --outdir=dist --watch",
+    "dev:server": "esbuild src/demo/server.ts --bundle --outdir=dist --platform=node --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,23 @@
   },
   "homepage": "https://github.com/GalMunGral/JSON-CmRDT#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/koa": "^2.13.6",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-static": "^4.0.2",
+    "@types/node": "^20.0.0",
+    "@types/uuid": "^9.0.1",
+    "esbuild": "^0.17.18",
+    "nodemon": "^2.0.22",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@koa/router": "^12.0.0",
+    "@types/koa__router": "^12.0.0",
+    "axios": "^1.4.0",
+    "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.0",
+    "koa-static": "^5.0.0",
+    "uuid": "^9.0.0"
   }
 }
