--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:client": "esbuild src/demo/client.ts --bundle --outdir=dist --watch",
+    "dev:client": "esbuild src/demo/client.tsx --bundle --outdir=dist --watch",
     "dev:server": "esbuild src/demo/server.ts --bundle --outdir=dist --platform=node --watch"
   },
   "repository": {
@@ -23,6 +23,7 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-static": "^4.0.2",
     "@types/node": "^20.0.0",
+    "@types/react-dom": "^18.2.4",
     "@types/uuid": "^9.0.1",
     "esbuild": "^0.17.18",
     "nodemon": "^2.0.22",
@@ -35,6 +36,8 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-static": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "uuid": "^9.0.0"
   }
 }
